--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "7.16.0",
     "@babel/runtime": "7.16.3",
     "@react-native-community/eslint-config": "2.0.0",
+    "@testing-library/react-native": "^9.0.0",
     "@types/react-native": "^0.66.8",
     "@types/react-native-vector-icons": "^6.4.10",
     "babel-jest": "26.6.3",
