--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "test": "jest --no-cache --coverage --watchAll=false",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -29,6 +29,7 @@
     "@babel/runtime": "7.16.3",
     "@react-native-community/eslint-config": "2.0.0",
     "@testing-library/react-native": "^9.0.0",
+    "@types/jest": "^27.0.3",
     "@types/react-native": "^0.66.8",
     "@types/react-native-vector-icons": "^6.4.10",
     "babel-jest": "26.6.3",
@@ -40,6 +41,20 @@
     "typescript": "^4.5.3"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "bail": 1,
+    "verbose": true,
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.ts", "src/**/*.tsx", "!src/store/**/*.ts"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
